feat: adjust spring boot starter autoconfigure
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>